--- a/prereq/index.html
+++ b/prereq/index.html
@@ -15,8 +15,8 @@
 <body>
 
     <div class="all-wrap">
-        <header>
-            <h1 class="hd-logo">SALON BEPPU</h1>
+        <header id="header">
+            <h1 id="hd-logo" class="hd-logo">SALON BEPPU</h1>
             <div id="hum" class="hum">
                 <span id="top"></span>
                 <span id="middle"></span>
